jib package refact and license file add